--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,14 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
+            <scope>test</scope>
             <version>4.12</version>
+        </dependency>
+        <dependency>
+            <!--http://commons.apache.org/proper/commons-cli/usage.html-->
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>RELEASE</version>
         </dependency>
     </dependencies>
 
@@ -57,13 +64,36 @@
                             <transformers>
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>com.youthlin.snl.compiler.frontend.tokenizer.Tokenizer</mainClass>
+                                    <mainClass>com.youthlin.snl.compiler.SNLc</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
                     </execution>
                 </executions>
             </plugin>
+
+            <plugin>
+                <!-- 解决maven test命令时console出现中文乱码乱码 -->
+                <!--http://blog.csdn.net/zhch152/article/details/39584053-->
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.7.2</version>
+                <configuration>
+                    <forkMode>once</forkMode>
+                    <argLine>-Dfile.encoding=UTF-8</argLine>
+                </configuration>
+            </plugin>
+            <plugin>
+                <!--执行mvn 报错 source-1.5 中不支持 diamond运算符-->
+                <!--http://www.cnblogs.com/carlo/p/5009968.html-->
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
 
