--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.youthlin.snl</groupId>
-    <artifactId>Compiler</artifactId>
+    <artifactId>SNLc</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
